--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-kits-start",
   "version": "0.0.1",
   "description": "electron stater kits",
-  "main": "config/main.js",
+  "main": "Config/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
