--- a/package.json
+++ b/package.json
@@ -16,21 +16,12 @@
     "desktop"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
     "electron": "^1.7.8",
-    "electron-packager": "^9.1.0",
-    "webpack": "^3.7.1"
+    "electron-packager": "^9.1.0"
   },
   "dependencies": {
-    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
-    "knex": "^0.13.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.4.4",
-    "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.4.4"
+    "lodash": "^4.17.4"
   },
   "author": "Muhammad Abdurrahman",
   "license": "MIT",
